--- a/netlify/style/sass/_base.sass
+++ b/netlify/style/sass/_base.sass
@@ -18,6 +18,11 @@ $tablet-screen: 768px
     // font-family: $font, Verdana, Geneva, sans-serif
     font-size: 22px
 
+@media only screen and (max-width: $mobile-screen)
+    :root
+        font-size: 20px
+
+
 
 
 .flex
